--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,56 @@ p {
         height: 100%;
     }
 
+
+    .gridContainer {
+        display: grid;
+        background-color:#0C0C0C;
+        width: 100%;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: 3rem 5rem 5rem 5rem 5rem 5rem 5rem;
+        padding: 2rem;
+        gap: 1rem;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+    .gridContainer img {
+        width: 100%;
+        height: 100%;
+        object-fit:contain;
+    }
+    .gridContainer h2{
+        grid-column: 1/5;
+    }
+    .img1grid {
+        grid-column:1/3;
+        grid-row: 2/5;
+    }
+    .gridContainer .p1 {
+        grid-column:3/5;
+        grid-row: 2/3;
+        font-size: .875rem;
+    }
+    .img2grid{
+        grid-column:3/5;
+        grid-row: 4/7;
+    }
+    .img4grid{
+        grid-column:2/3;
+        grid-row: 4/6;
+    }
+    .gridContainer .p2 {
+        grid-column:1/3;
+        grid-row: 6/8;
+        font-size: .875rem;
+    }
+    .img3grid{
+        grid-column:3/4;
+        grid-row: 5/8;
+    }
+
+
+
 }
 
 @media (max-width:425px){
@@ -576,7 +626,56 @@ p {
         width: 80%;
         height: 100%;
     }
+
+    .gridContainer {
+        display: grid;
+        background-color:#0C0C0C;
+        width: 100%;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: 3rem 5rem 5rem 5rem 5rem 5rem 5rem 5rem;
+        padding: 2rem;
+        gap: 1rem;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+    .gridContainer img {
+        width: 100%;
+        height: 100%;
+        object-fit:contain;
+    }
+    .gridContainer h2{
+        grid-column: 1/3;
+    }
+    .img1grid {
+        grid-column:1/2;
+        grid-row: 2/4;
+    }
+    .gridContainer .p1 {
+        grid-column:2/3;
+        grid-row: 2/3;
+        font-size: .75rem;
+    }
+    .img2grid{
+        grid-column:2/3;
+        grid-row: 3/6;
+    }
+    .img4grid{
+        grid-column:1/2;
+        grid-row: 5/7;
+    }
+    .gridContainer .p2 {
+        grid-column:1/2;
+        grid-row: 7/8;
+        font-size: .75rem;
+    }
+    .img3grid{
+        grid-column:2/3;
+        grid-row: 7/9;
+    }
 }
+
+
 
 
 
